<resources>
    <string name="app_name">Triaje</string>
    <string name="hint_dni">DNI / NIE</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_password">Contraseña</string>
    <string name="button_login">ENTRAR</string>
    <string name="register_prompt">¿Aún no te has registrado? </string>
    <string name="register_link">Regístrate aquí</string>
</resources>